--- a/BeerHub/src/app/app.component.scss
+++ b/BeerHub/src/app/app.component.scss
@@ -2,7 +2,6 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
-  color: #333;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -33,7 +32,6 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #393e46;
   opacity: 1;
   color: white;
   font-weight: 600;
@@ -44,13 +42,13 @@ p {
 }
 
 .content {
+  color: #fff;
   display: flex;
   margin: 60px auto 32px;
-  height: 100%;
+  height: calc(100% - 200px);
   max-height: 100vh;
   flex-direction: column;
   align-items: center;
-  background-color: #a35b0a;
 }
 
 svg.material-icons {
@@ -70,13 +68,11 @@ svg.material-icons:not(:last-child) {
   padding-top: 5%;
   width: 80%;
   height: 100%;
-  background-color: #24292e;
 }
 
 footer {
-  position: fixed;
+  position: sticky;
   bottom: 0px;
-  background-color: #393e46;
   height: 5%;
   width: 100%;
   color: white;
@@ -94,19 +90,6 @@ footer {
 footer a {
   display: flex;
   align-items: center;
-}
-
-.github-star-badge {
-  color: #24292e;
-  display: flex;
-  align-items: center;
-  font-size: 12px;
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  border-radius: 3px;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  margin-left: 4px;
-  font-weight: 600;
 }
 
 /* Responsive Styles */
