--- a/BeerHub/src/app/main-page/main-page.component.html
+++ b/BeerHub/src/app/main-page/main-page.component.html
@@ -1,10 +1,8 @@
-<div class="row" mt-5 pt-5>
-    <div class="col-xl">
-      <app-carousel></app-carousel>
-
-      <br />
-      asddgfdsf
-      sdgsdfgdsf
-      sdgsgsfdg
-    </div>
+<div class="col" mt-5 pt-5>
+  <div class="row">
+    <app-carousel></app-carousel>
   </div>
+  <div class="row">
+    <app-most-liked></app-most-liked>
+  </div>
+</div>
