--- a/BeerHub/src/styles.scss
+++ b/BeerHub/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,26 +19,31 @@ $BeerHub-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$BeerHub-theme: mat.define-light-theme((
-  color: (
-    primary: $BeerHub-primary,
-    accent: $BeerHub-accent,
-    warn: $BeerHub-warn,
+$BeerHub-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $BeerHub-primary,
+      accent: $BeerHub-accent,
+      warn: $BeerHub-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($BeerHub-theme);
 
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
 /* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/bootstrap";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  background-color: #353535;
+  color: #fff;
+  font-family: Nunito Sans !important;
+  margin: 0;
+}
