--- a/BeerHub/src/styles.scss
+++ b/BeerHub/src/styles.scss
@@ -11,8 +11,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$BeerHub-primary: mat.define-palette(mat.$indigo-palette);
-$BeerHub-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$BeerHub-primary: mat.define-palette(mat.$amber-palette);
+$BeerHub-accent: mat.define-palette(mat.$orange-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $BeerHub-warn: mat.define-palette(mat.$red-palette);
@@ -37,13 +37,23 @@ $BeerHub-theme: mat.define-light-theme(
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
 
-html,
-body {
+html {
   height: 100%;
 }
+
 body {
+  height: calc(100vh - 60px);
   background-color: #353535;
   color: #fff;
   font-family: Nunito Sans !important;
   margin: 0;
+  background: linear-gradient(55deg, #5c5c5c 0%, #494949   51%, #353535 85%);
+}
+
+a:link {
+  color: #FFA000;
+}
+
+a:visited {
+  color: #EF6C00
 }
