--- a/BeerHub/src/styles.scss
+++ b/BeerHub/src/styles.scss
@@ -42,8 +42,7 @@ html {
 }
 
 body {
-  height: calc(100vh - 60px);
-  background-color: #353535;
+  height: 150%;
   color: #fff;
   font-family: Nunito Sans !important;
   margin: 0;
