--- a/BeerHub/src/app/most-liked/most-liked.component.html
+++ b/BeerHub/src/app/most-liked/most-liked.component.html
@@ -1,3 +1,15 @@
 <!-- <mat-nav-list>
     <a mat-list-item href="..." *ngFor="let item of beers" [activated]="item.information">{{ item.name }}</a>
   </mat-nav-list> -->
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
+  <p>tekst</p>
