--- a/BeerHub/src/app/carousel/carousel.component.html
+++ b/BeerHub/src/app/carousel/carousel.component.html
@@ -10,7 +10,7 @@
 		<div class="carousel-caption">
 			<h3>{{titles.at(i)}}</h3>
 		</div>
-		<a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
+		<a [routerLink]="['', router_links.at(i)]" rel="nofollow noopener noreferrer">
 			<div class="picsum-img-wrapper">
 				<img [src]="img" class="image" alt="My image {{i + 1}} description" />
 			</div>
