Poprawa literówki w historii piwa

--- a/BeerHub/src/app/beer-history/beer-history.component.html
+++ b/BeerHub/src/app/beer-history/beer-history.component.html
@@ -242,7 +242,7 @@
                         <div class="linetime-panel-content">
                             <p class="text-muted">
                                 Beer was part of the daily diet of Egyptian pharaohs over 5,000 years ago. Then, it was made from baked barley bread,
-                                 and was also used in religious practices.[43] During the building of the Great Pyramids in Giza, Egypt, each worker
+                                 and was also used in religious practices. During the building of the Great Pyramids in Giza, Egypt, each worker
                                   got a daily ration of four to five liters of beer, which served as both nutrition and refreshment that was crucial 
                                   to the pyramids' construction.
                             </p>
