--- a/BeerHub/src/app/app.component.scss
+++ b/BeerHub/src/app/app.component.scss
@@ -53,8 +53,10 @@ p {
 
 .page {
   padding-top: 5%;
-  width: 95%;
+  width: 85%;
   height: 100%;
+  border-radius: 25px;
+  background: #4d4d4d;
 }
 
 footer {
