--- a/BeerHub/src/app/beer-history/beer-history.component.scss
+++ b/BeerHub/src/app/beer-history/beer-history.component.scss
@@ -88,6 +88,11 @@
         text-align: right;
     }
 
+    .text-muted {
+        color: black !important;
+        font-size: 1.15em;
+    }
+
     .linetime-img {
         left: 50%;
         transform: translateX(-48%);
