--- a/BeerHub/src/app/beer-list/beer-list.component.html
+++ b/BeerHub/src/app/beer-list/beer-list.component.html
@@ -1,62 +1,90 @@
-<div style="text-align: center;">
-  <mat-form-field fxFlex="40%">
-    <input matInput type="text" placeholder="Filter" [formControl]="inputChange" (keyup)="filter()" >
-  </mat-form-field>
-</div>
 <div class="table-content">
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element"> {{ element.id}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Beer name</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element"><a [routerLink]="['/beer', element.id]">{{ element.name}}</a>  </td>
-      </ng-container>
-
-      <ng-container matColumnDef="abv">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Alcohol by volume</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.abv }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="ibu">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>International bittering unit</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.ibu }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="ebc">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>European Brewery Convention</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.ebc }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="srm">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Standard Reference Method</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.srm }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="ph">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>pH</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.ph
-        }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="first_brewed">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>First brewery date</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">{{ element.first_brewed }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
+    <mat-form-field fxFlex="40%">
+      <input
+        matInput
+        type="text"
+        placeholder="Filter"
+        [formControl]="inputChange"
+        (keyup)="filter()"
+      />
+    </mat-form-field>
     <mat-paginator
       [pageSizeOptions]="[10]"
       showFirstLastButtons
       aria-label="Select page of periodic elements"
     >
     </mat-paginator>
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.id }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Beer name</th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          <a [routerLink]="['/beer', element.id]">{{ element.name }}</a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="abv">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Alcohol by volume
+        </th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.abv }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ibu">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          International bittering unit
+        </th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.ibu }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ebc">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          European Brewery Convention
+        </th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.ebc }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="srm">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Standard Reference Method
+        </th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.srm }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ph">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>pH</th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.ph }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="first_brewed">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          First brewery date
+        </th>
+        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+          {{ element.first_brewed }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </div>
 </div>
 <button mat-button (click)="query()">click me!</button>
