--- a/BeerHub/src/app/beer-list/beer-list.component.scss
+++ b/BeerHub/src/app/beer-list/beer-list.component.scss
@@ -4,7 +4,17 @@ table {
 
 .mat-table {
   overflow-y: scroll;
-  height: 80vh
+  height: 80vh;
+}
+
+.mat-mdc-cell,
+.mat-sort-header-content {
+  text-align: center !important;
+}
+
+::ng-deep .mat-mdc-form-field {
+  flex-direction: unset !important;
+  width: 80%;
 }
 
 .mat-cell,
@@ -26,4 +36,8 @@ table {
 
 .table-content {
   padding: 50px;
+}
+
+.mat-column-name {
+  width: 35%;
 }
