--- a/BeerHub/src/app/beer-types/beer-types.component.html
+++ b/BeerHub/src/app/beer-types/beer-types.component.html
@@ -1,143 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- bootstrap -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
-        integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
-        integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- frontawesome -->
-    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <!-- Jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
-<body>
-    <div class="tree">
-        <div class="resize_like_image">
-            <ul>
-                <li>
-                    <div>
-                        <h2>Beer</h2>
+<div class="tree">
+    <div class="resize_like_image">
+        <ul>
+            <li>
+                <div>
+                    <h1>Beer</h1>
+                    <div class="tree-img rounded-circle">
+                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <ul>
+                    <!-- LAGERS -->
+                    <li>
+                        <h1>Lager</h1>
                         <div class="tree-img rounded-circle">
                             <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
                         </div>
-                    </div>
-                    <ul>
-                        <!-- LAGERS -->
-                        <li>
-        
-                            <h2>Lager</h2>
-                            <div class="tree-img rounded-circle">
-                                <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                            </div>
-                            <ul>
-                                <li>
-                                    <h2>German Lager</h2>
-                                    <div class="tree-img rounded-circle">
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>American Lager</h2>
-                                    <div class="tree-img rounded-circle">
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>European Lager</h2>
-                                    <div class="tree-img rounded-circle">
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Pilsner</h2>
-                                    <div class="tree-img rounded-circle">
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                        <!-- ALES -->
-                        <li>
-                            <h2>Ales</h2>
-                            <div class="tree-img rounded-circle">
-                                <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                            </div>
-                            <ul>
-                                <li>
-                                    <h2>German Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Brown Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Lambic Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Pale Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Belgian Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Irish Ale</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Porter</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                                <li>
-                                    <h2>Stout</h2>
-                                    <div class="tree-img rounded-circle">
-        
-                                        <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+                        <ul>
+                            <li>
+                                <div class="tree-header">
+                                    German Lager
+                                </div>
+                                <div class="tree-img rounded-circle">
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    American Lager
+                                </div>
+                                <div class="tree-img rounded-circle">
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    European Lager
+                                </div>
+                                <div class="tree-img rounded-circle">
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Pilsner
+                                </div>
+                                <div class="tree-img rounded-circle">
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- ALES -->
+                    <li>
+                        <h1>Ale</h1>
+                        <div class="tree-img rounded-circle">
+                            <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="tree-header">
+                                    Mild Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    German Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Brown Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Lambic Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Pale Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Belgian Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Irish Ale
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Porter
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tree-header">
+                                    Stout
+                                </div>
+                                <div class="tree-img rounded-circle">
+
+                                    <img src="../../assets/beer_history_images/Present.jpg" alt="" class="img-fluid">
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
-</body>
-</html>
+</div>
