--- a/BeerHub/src/app/beer-types/beer-types.component.scss
+++ b/BeerHub/src/app/beer-types/beer-types.component.scss
@@ -1,111 +1,122 @@
-.resize_like_image{
-  background: white;
-  width: 1800px;
-  height: 600px;
-  padding: 50px;
+.resize_like_image {
+
   text-align: center;
   position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   transform-origin: center center;
 }
 
-.tree{
-  background: red;
-  padding: 20px;
-  resize: both;
-  position: relative;
-  height: 50%;
-  width: 100%;
-}
 .tree ul {
-	padding-top: 20px; position: relative;
-	
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+
+  padding-inline-start: 0;
+  padding-top: 1.5vw;
+  position: relative;
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
 }
 
 .tree li {
   display: inline;
-	float: left; text-align: center;
-	list-style-type: none;
-	position: relative;
-	padding: 20px 5px 0 5px;
-	
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+  float: left;
+  text-align: center;
+  list-style-type: none;
+  position: relative;
+  padding: 1.2vw 0 0 0.7vw;
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
 }
 
-/*::before and ::after to draw the connectors*/
+//::before and ::after to draw the connectors
 
-.tree li::before, .tree li::after{
-	content: '';
-	position: absolute; top: 0; right: 50%;
-	border-top: 1px solid gray;
-	width: 50%; height: 20px;
+.tree li::before,
+.tree li::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 50%;
+  border-top: 0.2vw solid gray;
+  width: 50%;
+  // length of the hanging lines
+  height: 1.2vw;
 }
-.tree li::after{
-	right: auto; left: 50%;
-	border-left: 1px solid gray;
+
+.tree li::after {
+  right: auto;
+  left: 50%;
+  border-left: 0.2vw solid gray;
 }
 
 /*Remove left-right connectors from elements without 
 any siblings*/
-.tree li:only-child::after, .tree li:only-child::before {
-	display: none;
+.tree li:only-child::after,
+.tree li:only-child::before {
+  display: none;
 }
 
 /*Remove space from the top of single children*/
-.tree li:only-child{ padding-top: 0;}
+.tree li:only-child {
+  padding-top: 0 none;
+}
 
 /*Remove left connector from first child and 
 right connector from last child*/
-.tree li:first-child::before, .tree li:last-child::after{
-	border: 0 none;
+.tree li:first-child::before,
+.tree li:last-child::after {
+  border: 0 none;
 }
+
 /*Adding back the vertical connector to the last nodes*/
-.tree li:last-child::before{
-	border-right: 1px solid grey;
-	border-radius: 0 5px 0 0;
-	-webkit-border-radius: 0 5px 0 0;
-	-moz-border-radius: 0 5px 0 0;
+.tree li:last-child::before {
+  border-right: 0.2vw solid grey;
+  border-radius: 0 0.5vw 0 0;
+  -webkit-border-radius: 0 0.5vw 0 0;
+  -moz-border-radius: 0 0.5vw 0 0;
 }
-.tree li:first-child::after{
-	border-radius: 5px 0 0 0;
-	-webkit-border-radius: 5px 0 0 0;
-	-moz-border-radius: 5px 0 0 0;
+
+.tree li:first-child::after {
+  border-radius: 0.5vw 0 0 0;
+  -webkit-border-radius: 0.5vw 0 0 0;
+  -moz-border-radius: 0.5vw 0 0 0;
 }
 
 /*Add downward connectors from parents*/
-.tree ul ul::before{
-	content: '';
-	position: absolute; top: 0; left: 50%;
-	border-left: 1px solid grey;
-	width: 0; height: 20px;
+.tree ul ul::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border-left: 0.2vw solid grey;
+  width: 0;
+  height: 1.5vw;
 }
 
-.tree-img
-{
-    width: 80px;
-    height: 80px;
-    border: 6px solid #000;
-    overflow: hidden;
-    background: #000;
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
-    
-    
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
+.tree-img {
+  width: 5vw;
+  height: 5vw;
+  border: 0.5vw solid #000;
+  overflow: hidden;
+  background: #000;
+  color: #fff;
+  display: inline-block;
+
+
+  border-radius: 0.5vw;
+  -webkit-border-radius: 0.5vw;
+  -moz-border-radius: 0.5vw;
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
 }
 
+.tree-header {
+  width: 5.5vw;
+  text-align: center;
+  overflow-wrap: anywhere;
+  font-size: medium;
+  font-weight: bold;
+}
 
