Beer types content

--- a/BeerHub/src/app/beer-types/beer-types.component.html
+++ b/BeerHub/src/app/beer-types/beer-types.component.html
@@ -144,3 +144,37 @@
         </ul>
     </div>
 </div>
+<div style="position: relative; width: 50%; text-align: left; float: left; padding: 2vw;">
+    <h1>Lagers</h1>  
+    <p>
+        Fermented with bottom-fermenting yeast at cold temperatures (35˚–50˚F).
+    </p>
+    <p>
+        Because of their warm fermentations, ales can generally ferment and age 
+        in a relatively short period of time (3-5 weeks)
+    </p>
+    <p>
+        In medieval Europe, ale, along 
+        with bread, was a very important source of nutrition. During this time, people 
+        (including children) drank small beer, which was unfiltered and porridge-like 
+        in consistency, but highly nutritious, with just enough alcohol (1% ABV) to 
+        act as a preservative. This provided nutrition and hydration without the effects 
+        of alcohol or the dangers of water.
+    </p>
+</div>
+<div style="position: relative; width: 50%; text-align: right; float: right; padding: 2vw;">
+    <h1>Ales</h1>   
+    <p>
+        Fermented with top-fermenting yeast at warm temperatures (60˚–70˚F).
+    </p>
+    <p>
+        Lagers take much longer to ferment than ales (up to 6 to 8 weeks) because 
+        they are cold fermented.
+    </p>
+    <p>
+        The birth of the Pilsner style in the 1800’s introduced much of the world to lagers. 
+        Virtually all beer before then were ales since yeast was not known as an ingredient 
+        and cold fermentation would have been difficult. 
+    </p>
+</div>
+
