--- a/BeerHub/src/app/beer-types/beer-types.component.scss
+++ b/BeerHub/src/app/beer-types/beer-types.component.scss
@@ -119,4 +119,16 @@ right connector from last child*/
   font-size: medium;
   font-weight: bold;
 }
+ 
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
