Tree font adjustments

--- a/BeerHub/src/app/beer-types/beer-types.component.scss
+++ b/BeerHub/src/app/beer-types/beer-types.component.scss
@@ -116,7 +116,7 @@ right connector from last child*/
   width: 5.5vw;
   text-align: center;
   overflow-wrap: anywhere;
-  font-size: medium;
+  font-size: 1.1vw;
   font-weight: bold;
 }
  
