--- a/BeerHub/src/app/beer-list/beer-list.component.html
+++ b/BeerHub/src/app/beer-list/beer-list.component.html
@@ -1,19 +1,9 @@
 <div class="table-content">
   <div class="mat-elevation-z8">
     <mat-form-field fxFlex="40%">
-      <input
-        matInput
-        type="text"
-        placeholder="Filter"
-        [formControl]="inputChange"
-        (keyup)="filter()"
-      />
+      <input matInput type="text" placeholder="Filter" [formControl]="inputChange" (keyup)="filter()" />
     </mat-form-field>
-    <mat-paginator
-      [pageSizeOptions]="[10]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-    >
+    <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
@@ -93,5 +83,4 @@
     </table>
   </div>
 </div>
-<button mat-button (click)="query()">click me!</button>
 <ng-template #noInformation>-</ng-template>
