Custom logo, placeholders, avatars and icon

--- a/BeerHub/src/app/beer-single/beer-single.component.html
+++ b/BeerHub/src/app/beer-single/beer-single.component.html
@@ -8,7 +8,7 @@
     <div class="flex-child-image">
       <img mat-card-image *ngIf="beer?.image_url; else noImageUrl" src={{beer.image_url}}>
       <ng-template #noImageUrl> <img mat-card-image
-          src="https://material.angular.io/assets/img/examples/shiba1.jpg"></ng-template>
+          src="../../assets/general/placeholder.png"></ng-template>
     </div>
     <div class="flex-child-description">
       <mat-card-content>
