--- a/BeerHub/src/app/beer-single/beer-single.component.scss
+++ b/BeerHub/src/app/beer-single/beer-single.component.scss
@@ -1,5 +1,6 @@
 .beer-single-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-image: url('../../assets/beer_history_images/square.jpg');
+    background-size: contain;
   }
 
   .mat-mdc-card{
