--- a/BeerHub/src/app/beer-single/beer-single.component.scss
+++ b/BeerHub/src/app/beer-single/beer-single.component.scss
@@ -1,50 +1,49 @@
 .beer-single-header-image {
-    background-image: url('../../assets/beer_history_images/square.jpg');
-    background-size: contain;
-  }
+  background-image: url('../../assets/beer_history_images/square.jpg');
+  background-size: contain;
+}
 
-  .mat-mdc-card{
-    background-color: #4d4d4d;
-  }
+.mat-mdc-card {
+  background-color: #4d4d4d;
+}
 
-  img{
-    width: 15vh;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    margin-top: auto;
-  }
+img {
+  width: 15vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-top: auto;
+}
 
-  .mat-mdc-card-subtitle {
-    color: #EF6C00
-  }
-  .beer-single-description-header
-  {
-    margin-bottom: 3px;
-    color: #EF6C00;
-    font-size: 15px;
-    font-weight: var(--mdc-typography-headline6-font-weight, 500);
-  }
+.mat-mdc-card-subtitle {
+  color: #EF6C00
+}
 
-  .beer-single-description
-  {
-    margin-bottom: 5px;
-    inline-size: 90%;
-    word-wrap: break-word;  
-  }
-  
-  .flex-child-image{
-    flex: 1;
-    margin: auto;
-  }
+.beer-single-description-header {
+  margin-bottom: 3px;
+  color: #EF6C00;
+  font-size: 15px;
+  font-weight: var(--mdc-typography-headline6-font-weight, 500);
+}
 
-  .flex-child-description{
-    flex: 1;
-    margin: 10px;
-  }
+.beer-single-description {
+  margin-bottom: 5px;
+  inline-size: 90%;
+  word-wrap: break-word;
+}
 
-  .flex-parent{
-    display: flex;
-    width: auto;
-  }
+.flex-child-image {
+  flex: 1;
+  margin: auto;
+}
+
+.flex-child-description {
+  flex: 1;
+  margin: 10px;
+}
+
+.flex-parent {
+  display: flex;
+  width: auto;
+}
