--- a/BeerHub/src/app/beer-list/beer-list.component.html
+++ b/BeerHub/src/app/beer-list/beer-list.component.html
@@ -1,14 +1,26 @@
 <div class="table-content">
   <div class="mat-elevation-z8">
-    <mat-form-field fxFlex="40%">
-      <input matInput type="text" placeholder="Filter" [formControl]="inputChange" (keyup)="filter()" />
-    </mat-form-field>
-    <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <div style="background-color: #FFFFFF; border-radius: var(--mdc-shape-small, 4px);">
+      <mat-form-field>
+        <input
+          matInput
+          type="text"
+          placeholder="Filter"
+          [formControl]="inputChange"
+          (keyup)="filter()"
+        />
+      </mat-form-field>
+      <mat-paginator
+        [pageSizeOptions]="[10]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements"
+      >
+      </mat-paginator>
+    </div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           {{ element.id }}
         </td>
       </ng-container>
@@ -24,7 +36,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Alcohol by volume
         </th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.abv; else noInformation"></div>
           {{ element.abv }}
         </td>
@@ -34,7 +46,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           International bittering unit
         </th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.ibu; else noInformation"></div>
           {{ element.ibu }}
         </td>
@@ -44,7 +56,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           European Brewery Convention
         </th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.ebc; else noInformation"></div>
           {{ element.ebc }}
         </td>
@@ -54,7 +66,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Standard Reference Method
         </th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.srm; else noInformation"></div>
           {{ element.srm }}
         </td>
@@ -62,7 +74,7 @@
 
       <ng-container matColumnDef="ph">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>pH</th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.ph; else noInformation"></div>
           {{ element.ph }}
         </td>
@@ -72,7 +84,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           First brewery date
         </th>
-        <td mat-cell [matTooltip]="element.tagline" *matCellDef="let element">
+        <td mat-cell *matCellDef="let element">
           <div *ngIf="element.first_brewed; else noInformation"></div>
           {{ element.first_brewed }}
         </td>
