--- a/BeerHub/src/app/main-page/main-page.component.html
+++ b/BeerHub/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div class="col" mt-5 pt-5>
+<div class="col" mt-5 pt-5 style="margin-bottom: 5vh; max-width: 80vw;">
   <div class="row">
     <app-carousel></app-carousel>
   </div>
