--- a/BeerHub/src/app/app.component.html
+++ b/BeerHub/src/app/app.component.html
@@ -18,7 +18,7 @@
         shape="circle"
         width="300"
       ></asl-google-signin-button>
-      <img *ngIf="user" src="{{ user?.photoUrl }}" referrerpolicy="no-referrer" style="border-radius: 50%; height: 5vh; width: 5vh;"/>
+      <img *ngIf="user" src="{{ user.photoUrl }}" referrerpolicy="no-referrer" style="border-radius: 50%; height: 5vh; width: 5vh;"/>
     </div>
   </div>
 
