--- a/BeerHub/src/app/app.component.html
+++ b/BeerHub/src/app/app.component.html
@@ -3,9 +3,9 @@
 <div class="content" role="main">
   <div class="toolbar" role="banner">
     <div [routerLink]="['']" style="cursor: pointer">
-      <img width="40" alt="Angular Logo" src="../assets/general/logo2.png" />
+      <img style="background-color:rgb(58, 58, 58); border-radius: 10%;" width="40" alt="Angular Logo" src="../assets/general/logo2.png" />
       <span style="font-size: x-large">BeerHub</span>
-    </div>
+    </div> 
     <div class="spacer"></div>
     <button mat-raised-button color="primary" [routerLink]="['beer-list']">
       Lista
