--- a/BeerHub/src/app/beer-single/beer-single.component.html
+++ b/BeerHub/src/app/beer-single/beer-single.component.html
@@ -3,9 +3,7 @@
     <div mat-card-avatar class="beer-single-header-image"></div>
     <mat-card-title *ngIf="beer?.name">
       {{ beer.name }}
-      <button *ngIf="user" mat-button color="warn" (click)="addFavourite()">
-        <mat-icon>favorite</mat-icon>
-      </button>
+      <mat-checkbox class="example-margin">Add to favorite!</mat-checkbox>
     </mat-card-title>
     <mat-card-subtitle *ngIf="beer?.tagline">{{
       beer.tagline
