--- a/BeerHub/src/app/beer-single/beer-single.component.scss
+++ b/BeerHub/src/app/beer-single/beer-single.component.scss
@@ -52,3 +52,18 @@ img {
   display: flex;
   width: auto;
 }
+
+.mat-mdc-checkbox.mat-accent {
+  color: #EF6C00;
+  --mdc-checkbox-unselected-icon-color: #000000;
+  --mdc-checkbox-unselected-hover-icon-color: #000000;
+  --mdc-checkbox-selected-focus-icon-color: #EF6C00;
+  --mdc-checkbox-selected-hover-icon-color: #EF6C00;
+  --mdc-checkbox-selected-icon-color: #EF6C00;
+  --mdc-checkbox-selected-pressed-icon-color: #EF6C00;
+}
+
+::ng-deep .mat-mdc-checkbox label{
+  color: #EF6C00;
+  font-weight: var(--mdc-typography-headline6-font-weight, 500);
+}
