Google ads i obrazek do last beer na karuzeli

--- a/BeerHub/src/app/main-page/main-page.component.html
+++ b/BeerHub/src/app/main-page/main-page.component.html
@@ -5,4 +5,11 @@
   <div class="row">
     <app-most-liked></app-most-liked>
   </div>
+  <div class="row" style="padding-top: 5vh;">
+    <ng-adsense [adClient]="'ca-pub-5472368569628245'" 
+    [pageLevelAds]="true"></ng-adsense>
+    <!-- placeholder -->
+    <div style="margin: 0 auto; height: auto; min-height: 10vh; width: auto; min-width: 70%; background-color: white; color:darkgray; text-align: right;">
+      Google Adsense Sample Ad
+    </div>
 </div>
