--- a/BeerHub/src/app/app.component.scss
+++ b/BeerHub/src/app/app.component.scss
@@ -18,9 +18,10 @@ h6 {
 
 ::ng-deep .mdc-button{
   margin-right: 2vw !important;
-  width: 4em;
+  width: 7.5em;
   height: 1.6em !important;
   font-size: 1.5em;
+  justify-content: center !important;
 }
 
 p {
